k8s/users/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: ecommerce
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
